# stunning-wallpaper

./: .gitignore  .pylintrc  README.md  pyproject.toml  requirements.txt  test.py
src/: main.py
src/backgroundgenerator/: background_generators.py
src/backgroundgenerator/gardientBg_generator/: gradient_bg_generator.py
src/backgroundgenerator/shapeBg_generator/: circle_bg_generator.py  rectangle_bg_generator.py  shape_bg_generator.py  triangleMeshBg_generator.py
src/backgroundgenerator/shapeBg_generator/common/: shape.py
src/backgroundgenerator/shapeBg_generator/shapes/: circle.py  point.py  rectangle.py  segment.py  shape.py  triangle.py
src/colorgenerator/: color.py  color_converter.py  color_generator.py
src/gradientgenerator/: gradient_generator.py
stunning_wallpaper/: main.py
stunning_wallpaper/backgroundgenerator/: background_generators.py
stunning_wallpaper/backgroundgenerator/gardientBg_generator/: simple_gardients.py
stunning_wallpaper/backgroundgenerator/mountainBg_generator/: mountainBg_generator.py
stunning_wallpaper/backgroundgenerator/shapeBg_generator/: shape_bg_generator.py  triangleMeshBg_generator.py
stunning_wallpaper/backgroundgenerator/shapes/: circle.py  point.py  polygon.py  rectangle.py  segment.py  shape.py  triangle.py
stunning_wallpaper/colorgenerator/: color.py  color_generator.py
